need to have chrome extension active even when closed but it is changing storage.local

--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,7 @@
         "http://*/*",
         "https://*/*"
       ],
-      "js": ["bower_components/jquery/dist/jquery.min.js", "background.js"],
+      "js": ["bower_components/jquery/dist/jquery.min.js", "popup.js"],
       "run_at": "document_end"
     }
   ],
